--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,5 @@
-.flex-container {
-  display: flex;
-  justify-content: center;
+.container {
+  text-align: center;
 }
 
 #resultsList {
@@ -9,5 +8,6 @@
 }
 
 .list-group-item {
+  text-align: left;
   margin-bottom: 5px;
 }
